kubernetes/apps/datasci/deploykf-dashboard-overrides/policy-central-dashboard-allow-istio-ingress.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: central-dashboard-allow-istio-ingress
  namespace: deploykf-dashboard
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/component: central-dashboard
      app.kubernetes.io/instance: dkf-core--deploykf-dashboard
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: deploykf-dashboard
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingress
      to:
        - operation:
            ports: ["8082"]
